<resources>
    <string name="app_name">Retro Music</string>
    <string name="discover">Discover</string>
    <string name="liked">Liked</string>
    <string name="playlists">Playlists</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_40">-1:40</string>
    <string name="song_name">Hidup seperti ini</string>
    <string name="artist_name">James adam</string>
    <string name="toolbar_title">Good morning Lam!</string>
    <string name="tv_title_made_for_you">Made for you</string>
    <string name="tv_see_all">See all</string>
    <string name="tv_title_popular_singer">Popular singer</string>
    <string name="tv_title_popular_song">Popular song</string>
    <string name="tv_title_recently">Just released recently</string>
    <string name="tv_artist_name">Nugroho alis</string>
    <string name="em_cua_ngay_hom_qua">Em cua ngay hom qua</string>
    <string name="son_tung_mtp">Son Tung MTP</string>
    <string name="podcast">Podcast</string>
    <string name="playlist">Playlist</string>
    <string name="name_of_the_song">name of the song</string>
    <string name="is_playing_from_the_list">IS PLAYING FROM THE LIST</string>
    <string name="open_lirics">Open lirics</string>
    <string name="xuan_thi">Xuan thi</string>
    <string name="bui_anh_tuan">Bui Anh Tuan</string>
    <string name="play">Play/Pause</string>
    <string name="retro_music">Retro Music</string>
    <string name="wellcome_back">Wellcome Back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="alrealy_have_an_account">Alrealy have an Account?</string>
    <string name="by_signin_up_you_agree_to_our">"By signin up you agree to our "</string>
    <string name="and">"and "</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="an_4_digit_code_has_been_sent_to_your_email">An 4 digit code has been sent to your email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_reciever_the_otp">Didn\'t reciever the OTP?</string>
    <string name="add_account">Add account</string>
    <string name="content_listened_to">content listened to</string>
    <string name="log_out">Log out</string>
    <string name="news">News</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_morning">Good morning</string>
    <string name="good_evening">Good evening</string>
    <array name="filter_playlist">
        <item name="podcast">Podcast</item>
        <item name="playlist">Playlist</item>
        <item name="album">Album</item>
        <item name="artist">Artist</item>
        <item name="downloaded">Downloaded</item>
    </array>
    <string-array name="filter_playlist2">
        <item name="podcast">Podcast</item>
    </string-array>

</resources>