<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/retro_music"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blur_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:blurOverlayColor="#32000000"
            android:layout_alignParentBottom="true">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/_30sdp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_120sdp"
                    android:gravity="center"
                    android:text="@string/wellcome_back"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_to_your_account"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/edtEmailSI"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_300sdp"
                    android:autofillHints=""
                    android:background="@drawable/vien_edt"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtPwSI"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/vien_edt"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/edtEmailSI"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmailSI" />

                <Button
                    android:id="@+id/btnFgPw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_orange_light"
                    app:layout_constraintBottom_toTopOf="@+id/btnSI"
                    app:layout_constraintEnd_toEndOf="@+id/edtPwSI"
                    app:layout_constraintTop_toBottomOf="@+id/edtPwSI" />

                <CheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/background_color"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/btnSI"
                    app:layout_constraintStart_toStartOf="@+id/edtPwSI"
                    app:layout_constraintTop_toBottomOf="@+id/edtPwSI" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSI"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_450sdp"
                    android:background="@drawable/bg_button_gradientcl"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSI">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/line_left" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingHorizontal="5dp"
                            android:text="@string/or"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15ssp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/line_right" />
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/google_logo" />

                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginHorizontal="@dimen/_25sdp"
                            android:src="@drawable/logos_facebook" />

                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/apple_logo" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/_5sdp"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSU"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:text="@string/create_an_account"
                            android:textAllCaps="false"
                            android:textColor="@color/yellow"
                            tools:layout_editor_absoluteX="233dp"
                            tools:layout_editor_absoluteY="544dp" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </eightbitlab.com.blurview.BlurView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>