<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/retro_music"
                android:scaleType="centerCrop"
                android:src="@drawable/background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blur_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:blurOverlayColor="#32000000"
                android:layout_alignParentBottom="true">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/login_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/_30sdp">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_120sdp"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_30ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/create_your_new_account"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <EditText
                        android:id="@+id/edtEmailSU"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_260sdp"
                        android:autofillHints=""
                        android:background="@drawable/vien_edt"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edtPwSU"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/vien_edt"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtEmailSU" />

                    <EditText
                        android:id="@+id/edtCfPwSU"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/vien_edt"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtPwSU" />

                    <LinearLayout
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtCfPwSU">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/by_signin_up_you_agree_to_our"
                                android:textColor="@color/white" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_20sdp"
                                android:background="#00FFFFFF"
                                android:lines="1"
                                android:text="@string/terms"
                                android:textAllCaps="false"
                                android:textColor="@color/yellow" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/and"
                                android:textColor="@color/white" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_20sdp"
                                android:background="#00FFFFFF"
                                android:text="@string/privacy"
                                android:textAllCaps="false"
                                android:textColor="@color/yellow"/>
                        </LinearLayout>
                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSU"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_450sdp"
                        android:background="@drawable/bg_button_gradientcl"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.50"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnSU">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/line_left" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingHorizontal="5dp"
                                android:text="@string/or"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_15ssp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/line_right" />
                        </LinearLayout>

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:src="@drawable/google_logo" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_marginHorizontal="@dimen/_25sdp"
                                android:src="@drawable/logos_facebook" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:src="@drawable/apple_logo" />

                        </LinearLayout>

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="@dimen/_5sdp"
                                android:text="@string/alrealy_have_an_account"
                                android:textColor="@color/white" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnSI"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="#00FFFFFF"
                                android:text="@string/log_in"
                                android:textAllCaps="false"
                                android:textColor="@color/yellow"
                                tools:layout_editor_absoluteX="233dp"
                                tools:layout_editor_absoluteY="544dp" />

                        </LinearLayout>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </eightbitlab.com.blurview.BlurView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>