<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.lampro.mymusic.utils.StringUtils" />
    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.MainActivity">



        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/nav_bottom"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_above="@id/nav_bottom"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:clickable="true"
            android:background="@drawable/music_playing_frame"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_img_playing"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_alignParentStart="true"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <ImageView
                        android:id="@+id/img_song_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        android:src="@drawable/defaultimgplaying" />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/ibtn_pause"
                    android:layout_toRightOf="@id/cv_img_playing"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_song_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song_name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_artist_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist_name"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/ibtn_pause"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_toLeftOf="@id/ibtn_volume"
                    android:src="@drawable/pause" />

                <ImageView
                    android:id="@+id/ibtn_volume"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:src="@drawable/volume_high" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tv_time"
                    android:indeterminate="false"
                    android:maxHeight="@dimen/_6sdp"
                    android:minHeight="@dimen/_6sdp"
                    android:progressDrawable="@drawable/custom_track"
                    android:splitTrack="false"
                    android:thumb="@drawable/custom_thumb"
                    android:thumbOffset="0dp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/_1_40" />


            </RelativeLayout>


        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/menu" />


    </RelativeLayout>
</layout>